--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: My Portfolio
 description: A portfolio built with Jekyll and GitHub Pages.
-theme: minimal-mistakes-jekyll
+theme: jekyll-theme-minimal
