--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: My Portfolio
-description: A portfolio built with Jekyll and GitHub Pages.
+description: A portfolio built with GitHub Pages and the Cayman theme.
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
